# SturdyEngineRS

./: .gitignore  Cargo.toml  ROADMAP.md  agent_collaboration.md  cbindgen.toml  deep-research-report.md
.zed/: tasks.json
crates/clay-ui/: Cargo.toml
crates/clay-ui/src/: batch.rs  color.rs  context.rs  coords.rs  element.rs  floating.rs  font_discovery.rs  geometry.rs  gradient.rs  id.rs  image_tiling.rs  input.rs  layout.rs  lib.rs  media.rs  mosaic.rs  render_command.rs  render_graph.rs  shader.rs  text.rs  tree.rs  virtualization.rs  widgets.rs
crates/sturdy-engine/: Cargo.toml
crates/sturdy-engine-core/: Cargo.toml  build.rs
crates/sturdy-engine-core/src/: adapter_info.rs  adapter_kind.rs  adapter_selection.rs  backend.rs  backend_features.rs  binding.rs  buffer.rs  caps.rs  device.rs  error.rs  external_resource.rs  gpu_capture.rs  handles.rs  image.rs  lib.rs  limits.rs  native_handles.rs  pipeline.rs  push_constants.rs  raw_capabilities.rs  render_graph.rs  sampler.rs  shader.rs  slang.rs  surface.rs
crates/sturdy-engine-core/src/backend/: factory.rs
crates/sturdy-engine-core/src/backend/d3d12/: config.rs  mod.rs
crates/sturdy-engine-core/src/backend/metal/: config.rs  mod.rs
crates/sturdy-engine-core/src/backend/vulkan/: adapter.rs  alias_heaps.rs  allocator.rs  caps.rs  commands.rs  config.rs  debug.rs  descriptors.rs  device.rs  instance.rs  mod.rs  pipelines.rs  queues.rs  resources.rs  shaders.rs  surfaces.rs
crates/sturdy-engine-core/src/backend/vulkan/commands/: batch_pool.rs
crates/sturdy-engine-core/src/render_graph/: alias_plan.rs
crates/sturdy-engine-core/src/slang/: spirv_push_constants.rs  spirv_vertex_inputs.rs
crates/sturdy-engine-core/src/surface/: native_surface_desc.rs  surface_capabilities.rs  surface_color_space.rs  surface_event.rs  surface_hdr_caps.rs  surface_hdr_preference.rs  surface_info.rs  surface_present_mode.rs  surface_recreate_desc.rs  surface_size.rs
crates/sturdy-engine-ffi/: Cargo.toml  build.rs
crates/sturdy-engine-ffi/src/: lib.rs
crates/sturdy-engine-macros/: Cargo.toml
crates/sturdy-engine-macros/src/: lib.rs
crates/sturdy-engine-platform/: Cargo.toml
crates/sturdy-engine-platform/src/: capability.rs  lib.rs  native_window_appearance.rs  platform.rs  window_appearance.rs  window_effect_region.rs  window_material_kind.rs
crates/sturdy-engine-platform/src/linux/: mod.rs
crates/sturdy-engine-platform/src/linux/wayland/: background_effect.rs  mod.rs
crates/sturdy-engine-platform/src/macos/: mod.rs
crates/sturdy-engine-platform/src/windows/: mod.rs
crates/sturdy-engine-testbed/: Cargo.toml  build.rs
crates/sturdy-engine-testbed/shaders/: color_lut_gen.slang  composite_fragment.slang  hud_text.slang  motion_vectors.slang  push_fragment.slang  push_vertex.slang  shader_graph_fragment.slang  shader_graph_vertex.slang  shader_playground_fragment.slang  testbed_compute.slang  textured_fragment.slang  textured_vertex.slang  tonemap.slang  triangle_fragment.slang  triangle_vertex.slang
crates/sturdy-engine-testbed/src/: main.rs  push_demo.rs  textured.rs
crates/sturdy-engine-testbed/src/push_demo/: bytes.rs  geometry.rs  mod.rs  push_constants_demo.rs  push_data.rs  push_vertex.rs  shader_assets.rs
crates/sturdy-engine/shaders/: anti_aliasing.slang  bloom_bright_extract.slang  bloom_composite.slang  bloom_downsample.slang  bloom_tonemap_composite.slang  bloom_upsample.slang  debug_overlay_solid_color_fragment.slang  debug_overlay_ui_shape_fragment.slang  deferred_lighting.slang  gbuffer_fragment.slang  lit_fragment.slang  mesh_vertex_2d.slang  mesh_vertex_3d.slang  motion_vector_debug.slang  passthrough_fragment.slang  text_overlay_alpha_fragment.slang  text_overlay_msdf_fragment.slang  text_overlay_sdf_fragment.slang  unlit_fragment.slang
crates/sturdy-engine/src/: anti_aliasing_pass.rs  antialiasing.rs  application.rs  asset_loader.rs  bind_group.rs  bloom_pass.rs  compute_program.rs  debug_draw_2d.rs  debug_overlay.rs  debug_view_picker.rs  deferred_pass.rs  device_manager.rs  frame_clock.rs  frontend_graph.rs  game_shell.rs  geometry.rs  gpu_procedural_texture.rs  graph_frame.rs  hdr_pipeline.rs  input.rs  lib.rs  mesh.rs  mesh_program.rs  mip_pyramid.rs  motion_vector_debug.rs  pipeline_layout.rs  plot2d.rs  procedural_texture.rs  quad_batch.rs  runtime.rs  sampler_catalog.rs  screenshot.rs  shader_watcher.rs  tests.rs  text_draw.rs  text_engine.rs  text_overlay.rs  text_tiling.rs  texture.rs  upload_arena.rs  (+1 more)
crates/sturdy-engine/src/scene/: batch.rs  camera.rs  material.rs  material_asset.rs  material_graph.rs  mod.rs  object.rs  orbit_camera.rs  render_target.rs  scene.rs
crates/textui/: Cargo.toml
crates/textui/src/: advanced_text.rs  button_options.rs  code_block_options.rs  gpu.rs  lib.rs  markdown_options.rs  tooltip_options.rs
crates/textui/src/advanced_text/: text_atlas_content_mode.rs  text_atlas_page_data.rs
docs/: architecture.md  panic_policy.md  runtime_product_direction.md  text_rendering_contract.md
tools/: generate-ffi-header.sh  panic-audit.py
