[workspace]
members = [
    "crates/sturdy-engine-core",
    "crates/sturdy-engine-ffi",
    "crates/sturdy-engine",
    "crates/sturdy-engine-testbed",
    "crates/sturdy-engine-macros",
    "crates/textui",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/sturdy-engine"
rust-version = "1.85"

[workspace.dependencies]
cosmic-text = "0.18"

# Keep engine crates optimized even when building debug/test profiles. This is
# useful for GPU-facing code paths where debug codegen can distort timings and
# resize/render behavior.
[profile.dev.package.sturdy-engine-core]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.sturdy-engine]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.sturdy-engine-ffi]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.sturdy-engine-testbed]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.sturdy-engine-macros]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.dev.package.textui]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.test.package.sturdy-engine-core]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.test.package.sturdy-engine]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.test.package.sturdy-engine-ffi]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.test.package.sturdy-engine-testbed]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.test.package.sturdy-engine-macros]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false

[profile.test.package.textui]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false
