[package]
name = "sturdy-engine-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sturdy_engine_core"
path = "src/lib.rs"

[features]
# When built on stable Rust, this feature disables the nightly-only
# `stmt_expr_attributes` / `proc_macro_hygiene` feature gates.
stable = []

[dependencies]
sturdy-engine-macros = { path = "../sturdy-engine-macros" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded", "std"] }
ash-window = "0.13"
raw-window-handle = "0.6"
