[package]
name = "sturdy-engine-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "sturdy_engine_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
sturdy-engine-core = { path = "../sturdy-engine-core" }
