[package]
name = "sturdy-engine-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sturdy_engine_platform"
path = "src/lib.rs"

[dependencies]
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSColor",
    "NSGraphics",
    "NSResponder",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
] }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-backend = { version = "0.3.15", features = ["client_system"] }
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
