[package]
name = "sturdy-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sturdy_engine"
path = "src/lib.rs"

[dependencies]
bytemuck = "1.20"
glam = "0.30"
sturdy-engine-core = { path = "../sturdy-engine-core" }
