[package]
name = "sturdy-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sturdy_engine"
path = "src/lib.rs"

[dependencies]
bytemuck = "1.20"
clay-ui = { path = "../clay-ui" }
glam.workspace = true
png = "0.17"
raw-window-handle = "0.6"
sturdy-engine-core = { path = "../sturdy-engine-core" }
sturdy-engine-macros = { path = "../sturdy-engine-macros" }
sturdy-engine-platform = { path = "../sturdy-engine-platform" }
textui = { path = "../textui" }
winit = { version = "0.30", optional = true }

[features]
default = ["app-shell"]
app-shell = ["winit"]
